[gd_scene load_steps=7 format=2]

[ext_resource path="res://menu/start.png" type="Texture" id=1]
[ext_resource path="res://menu/inventory.png" type="Texture" id=2]
[ext_resource path="res://menu/Menu.gd" type="Script" id=3]
[ext_resource path="res://menu/name.png" type="Texture" id=4]
[ext_resource path="res://menu/settings.png" type="Texture" id=5]
[ext_resource path="res://menu/background.png" type="Texture" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="background_menu" type="TextureRect" parent="."]
margin_left = -392.0
margin_top = -152.0
margin_right = 1708.0
margin_bottom = 928.0
texture = ExtResource( 6 )
stretch_mode = 2

[node name="name" type="TextureRect" parent="."]
margin_left = 264.0
margin_top = 72.0
margin_right = 1001.0
margin_bottom = 273.0
texture = ExtResource( 4 )

[node name="b_start" type="Button" parent="."]
margin_left = 504.0
margin_top = 288.0
margin_right = 771.0
margin_bottom = 365.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 1 )
flat = true
icon_align = 1

[node name="b_inventory" type="Button" parent="."]
margin_left = 504.0
margin_top = 400.0
margin_right = 771.0
margin_bottom = 464.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="b_settings" type="Button" parent="."]
margin_left = 504.0
margin_top = 504.0
margin_right = 771.0
margin_bottom = 568.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true

[connection signal="button_down" from="b_start" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="b_inventory" to="." method="_on_b_inventory_button_down"]
[connection signal="button_down" from="b_settings" to="." method="_on_b_settings_button_down"]
